// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.29.0

package models

import (
	"database/sql"
	"database/sql/driver"
	"fmt"
	"time"
)

type AgreementConsentType string

const (
	AgreementConsentTypePersonalData  AgreementConsentType = "personal_data"
	AgreementConsentTypeContractTerms AgreementConsentType = "contract_terms"
	AgreementConsentTypeAd            AgreementConsentType = "ad"
)

func (e *AgreementConsentType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = AgreementConsentType(s)
	case string:
		*e = AgreementConsentType(s)
	default:
		return fmt.Errorf("unsupported scan type for AgreementConsentType: %T", src)
	}
	return nil
}

type NullAgreementConsentType struct {
	AgreementConsentType AgreementConsentType
	Valid                bool // Valid is true if AgreementConsentType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullAgreementConsentType) Scan(value interface{}) error {
	if value == nil {
		ns.AgreementConsentType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.AgreementConsentType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullAgreementConsentType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.AgreementConsentType), nil
}

type BookingStatus string

const (
	BookingStatusDraft                 BookingStatus = "draft"
	BookingStatusPendingSignature      BookingStatus = "pending_signature"
	BookingStatusPendingPayment        BookingStatus = "pending_payment"
	BookingStatusPartiallyPaid         BookingStatus = "partially_paid"
	BookingStatusFullyPaid             BookingStatus = "fully_paid"
	BookingStatusCancellationRequested BookingStatus = "cancellation_requested"
	BookingStatusCanceled              BookingStatus = "canceled"
)

func (e *BookingStatus) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = BookingStatus(s)
	case string:
		*e = BookingStatus(s)
	default:
		return fmt.Errorf("unsupported scan type for BookingStatus: %T", src)
	}
	return nil
}

type NullBookingStatus struct {
	BookingStatus BookingStatus
	Valid         bool // Valid is true if BookingStatus is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullBookingStatus) Scan(value interface{}) error {
	if value == nil {
		ns.BookingStatus, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.BookingStatus.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullBookingStatus) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.BookingStatus), nil
}

type CommunicationChannel string

const (
	CommunicationChannelPhone    CommunicationChannel = "phone"
	CommunicationChannelTelegram CommunicationChannel = "telegram"
	CommunicationChannelWhatsapp CommunicationChannel = "whatsapp"
	CommunicationChannelEmail    CommunicationChannel = "email"
	CommunicationChannelMeeting  CommunicationChannel = "meeting"
)

func (e *CommunicationChannel) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = CommunicationChannel(s)
	case string:
		*e = CommunicationChannel(s)
	default:
		return fmt.Errorf("unsupported scan type for CommunicationChannel: %T", src)
	}
	return nil
}

type NullCommunicationChannel struct {
	CommunicationChannel CommunicationChannel
	Valid                bool // Valid is true if CommunicationChannel is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullCommunicationChannel) Scan(value interface{}) error {
	if value == nil {
		ns.CommunicationChannel, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.CommunicationChannel.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullCommunicationChannel) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.CommunicationChannel), nil
}

type ConsentStatus string

const (
	ConsentStatusGranted ConsentStatus = "granted"
	ConsentStatusPending ConsentStatus = "pending"
	ConsentStatusRevoked ConsentStatus = "revoked"
)

func (e *ConsentStatus) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = ConsentStatus(s)
	case string:
		*e = ConsentStatus(s)
	default:
		return fmt.Errorf("unsupported scan type for ConsentStatus: %T", src)
	}
	return nil
}

type NullConsentStatus struct {
	ConsentStatus ConsentStatus
	Valid         bool // Valid is true if ConsentStatus is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullConsentStatus) Scan(value interface{}) error {
	if value == nil {
		ns.ConsentStatus, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.ConsentStatus.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullConsentStatus) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.ConsentStatus), nil
}

type InsuranceType string

const (
	InsuranceTypeMedical     InsuranceType = "medical"
	InsuranceTypeLostLuggage InsuranceType = "lost_luggage"
)

func (e *InsuranceType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = InsuranceType(s)
	case string:
		*e = InsuranceType(s)
	default:
		return fmt.Errorf("unsupported scan type for InsuranceType: %T", src)
	}
	return nil
}

type NullInsuranceType struct {
	InsuranceType InsuranceType
	Valid         bool // Valid is true if InsuranceType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullInsuranceType) Scan(value interface{}) error {
	if value == nil {
		ns.InsuranceType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.InsuranceType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullInsuranceType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.InsuranceType), nil
}

type InteractionType string

const (
	InteractionTypeDiscussion InteractionType = "discussion"
	InteractionTypeAgreement  InteractionType = "agreement"
	InteractionTypeComplaint  InteractionType = "complaint"
)

func (e *InteractionType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = InteractionType(s)
	case string:
		*e = InteractionType(s)
	default:
		return fmt.Errorf("unsupported scan type for InteractionType: %T", src)
	}
	return nil
}

type NullInteractionType struct {
	InteractionType InteractionType
	Valid           bool // Valid is true if InteractionType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullInteractionType) Scan(value interface{}) error {
	if value == nil {
		ns.InteractionType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.InteractionType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullInteractionType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.InteractionType), nil
}

type MealsType string

const (
	MealsTypeBreakfast MealsType = "breakfast"
	MealsTypeHalfBoard MealsType = "half_board"
	MealsTypeFullBoard MealsType = "full_board"
)

func (e *MealsType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = MealsType(s)
	case string:
		*e = MealsType(s)
	default:
		return fmt.Errorf("unsupported scan type for MealsType: %T", src)
	}
	return nil
}

type NullMealsType struct {
	MealsType MealsType
	Valid     bool // Valid is true if MealsType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullMealsType) Scan(value interface{}) error {
	if value == nil {
		ns.MealsType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.MealsType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullMealsType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.MealsType), nil
}

type NotificationType string

const (
	NotificationTypePassportExpiry  NotificationType = "passport_expiry"
	NotificationTypeFlightReminder  NotificationType = "flight_reminder"
	NotificationTypePaymentReminder NotificationType = "payment_reminder"
	NotificationTypeBirthdayPromo   NotificationType = "birthday_promo"
)

func (e *NotificationType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = NotificationType(s)
	case string:
		*e = NotificationType(s)
	default:
		return fmt.Errorf("unsupported scan type for NotificationType: %T", src)
	}
	return nil
}

type NullNotificationType struct {
	NotificationType NotificationType
	Valid            bool // Valid is true if NotificationType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullNotificationType) Scan(value interface{}) error {
	if value == nil {
		ns.NotificationType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.NotificationType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullNotificationType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.NotificationType), nil
}

type PassportType string

const (
	PassportTypeInternal PassportType = "internal"
	PassportTypeForeign  PassportType = "foreign"
)

func (e *PassportType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = PassportType(s)
	case string:
		*e = PassportType(s)
	default:
		return fmt.Errorf("unsupported scan type for PassportType: %T", src)
	}
	return nil
}

type NullPassportType struct {
	PassportType PassportType
	Valid        bool // Valid is true if PassportType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullPassportType) Scan(value interface{}) error {
	if value == nil {
		ns.PassportType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.PassportType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullPassportType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.PassportType), nil
}

type PromotionType string

const (
	PromotionTypeNewTours       PromotionType = "new_tours"
	PromotionTypeLastMinuteTour PromotionType = "last_minute_tour"
	PromotionTypeEarlyBooking   PromotionType = "early_booking"
)

func (e *PromotionType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = PromotionType(s)
	case string:
		*e = PromotionType(s)
	default:
		return fmt.Errorf("unsupported scan type for PromotionType: %T", src)
	}
	return nil
}

type NullPromotionType struct {
	PromotionType PromotionType
	Valid         bool // Valid is true if PromotionType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullPromotionType) Scan(value interface{}) error {
	if value == nil {
		ns.PromotionType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.PromotionType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullPromotionType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.PromotionType), nil
}

type AgreementConsent struct {
	ID         int32
	AssigneeID int32
	ContractID int32
	TemplateID int32
	Date       time.Time
	Status     ConsentStatus
}

type Amenity struct {
	ID          int32
	Name        string
	Description sql.NullString
}

type Assignee struct {
	ID       int32
	ClientID int32
}

type Ban struct {
	ID        int32
	ClientID  int32
	BanReason string
}

type Booking struct {
	ID             int32
	TourID         int32
	Status         BookingStatus
	ContractNumber string
	CreatedAt      time.Time
	UpdatedAt      time.Time
}

type BookingAgreement struct {
	ID         int32
	ClientID   int32
	BookingID  int32
	SignedDate time.Time
}

type City struct {
	ID             int32
	Name           string
	CountryID      int32
	TimezoneOffset int32
}

type Client struct {
	ID            int32
	FullName      string
	Phone         string
	Email         string
	BirthDate     time.Time
	CityID        int32
	IsBlacklisted sql.NullBool
}

type ClientInteraction struct {
	ID                   int32
	ClientID             int32
	Time                 time.Time
	CommunicationChannel CommunicationChannel
	MeetingLocation      sql.NullString
	Type                 InteractionType
	Summary              sql.NullString
	Agreements           sql.NullString
	ReminderID           sql.NullInt32
}

type ClientNextContactReminder struct {
	ID                            int32
	ClientID                      int32
	PreferredCommunicationChannel CommunicationChannel
	Message                       string
	SendTime                      time.Time
}

type ClientPersonalNotification struct {
	ID                            int32
	ClientID                      int32
	PreferredCommunicationChannel CommunicationChannel
	TemplateID                    int32
	SendTime                      time.Time
}

type ConsentTemplate struct {
	ID      int32
	Name    string
	Type    AgreementConsentType
	Content string
}

type Contract struct {
	ID         int32
	AssigneeID int32
	TemplateID int32
	IssueDate  time.Time
	SignDate   sql.NullTime
	Status     ConsentStatus
	TotalPrice string
}

type ContractTemplate struct {
	ID                 int32
	Name               string
	Content            string
	ValidityPeriodDays int32
}

type Country struct {
	ID   int32
	Name string
}

type Excursion struct {
	ID              int32
	TourID          int32
	OrganizerID     int32
	Name            string
	MeetingLocation int32
	MeetingTime     time.Time
}

type Hotel struct {
	ID                int32
	Name              string
	Address           string
	CancellationTerms string
}

type HotelInteraction struct {
	ID                    int32
	HotelID               int32
	DateUtc               time.Time
	CommunicationChannel  CommunicationChannel
	Type                  InteractionType
	Summary               sql.NullString
	Agreements            sql.NullString
	NextContactReminderID sql.NullInt32
}

type HotelNextContactReminder struct {
	ID                            int32
	HotelID                       int32
	PreferredCommunicationChannel CommunicationChannel
	Message                       string
	SendDate                      time.Time
}

type HotelRoomCategory struct {
	ID            int32
	HotelID       int32
	Name          string
	PricePerNight string
	MaxGuests     int32
}

type Insurance struct {
	ID                 int32
	TourID             int32
	InsuranceCompanyID int32
	CoverageType       InsuranceType
}

type InsuranceCompany struct {
	ID    int32
	Name  string
	Phone string
	Email string
}

type NotificationTemplate struct {
	ID              int32
	Type            NotificationType
	MessageTemplate sql.NullString
}

type Organizer struct {
	ID    int32
	Name  string
	Phone string
	Email string
}

type Passport struct {
	ID             int32
	ClientID       int32
	Type           PassportType
	Number         string
	ExpirationDate time.Time
	IssueDate      time.Time
}

type PaymentLink struct {
	ID        int32
	BookingID int32
	Url       string
	QrCode    string
}

type Promotion struct {
	ID        int32
	Title     string
	Content   string
	PromoType PromotionType
	CreatedAt time.Time
}

type RoutePoint struct {
	ID                   int32
	RouteID              int32
	CityID               int32
	Name                 string
	Address              string
	DurationTime         sql.NullInt64
	InRouteOrderPosition int32
}

type Tour struct {
	ID                 int32
	Title              string
	PriceEur           string
	Quota              int32
	MealsType          NullMealsType
	IsLastMinute       sql.NullBool
	LastMinuteApproved sql.NullBool
	BaseDurationDays   int32
}

type TourIteration struct {
	ID        int32
	TourID    int32
	StartDate time.Time
	EndDate   time.Time
}

type TourRoute struct {
	ID     int32
	TourID int32
}

type Transfer struct {
	ID             int32
	TourID         int32
	TransportID    int32
	DeparturePoint sql.NullInt32
	ArrivalPoint   sql.NullInt32
	DepartureTime  time.Time
}

type TransportService struct {
	ID      int32
	Company string
	Model   sql.NullString
}
