@startuml trvael
skinparam Linetype ortho
left to right direction

package "client" {
  entity clients{
    + id: INTEGER <<PK>>
    --
    full_name: VARCHAR(255) NOT NULL
    phone: VARCHAR(20) NOT NULL
    email: VARCHAR(255) NOT NULL
    birth_date: DATE NOT NULL
    city_id: VARCHAR(100) NOT NULL
    is_blacklisted: BOOLEAN DEFAULT FALSE
  }

  entity bans {
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> NOT NULL
    ban_reason: TEXT
  }

  entity countries {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(255) NOT NULL

  }

  entity cities {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(255) NOT NULL
    country_id: INTEGER NOT NULL <<FK>> (countries)
    timezone_offsetL INTEGER NOT NULL
  }

  entity passports{
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> (clients)
    type: passport_type NOT NULL
    number: VARCHAR(50) NOT NULL
    expiration_date: DATE NOT NULL
    issue_date: DATE NOT NULL
    --
    UNIQUE(client_id, type)
  }

  entity client_interactions {
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> (clients)
    time: TIMESTAMPTZ NOT NULL
    communication_channel: communication_channel NOT NULL
    meeting_location: VARCHAR(255)
    type: interaction_type NOT NULL
    summary: TEXT
    agreements: TEXT
    reminder_id: INTEGER <<FK>> (client_next_contact_reminders)
  }

  entity client_next_contact_reminders {
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> (clients)
    preferred_communication_channel: communication_channel NOT NULL
    message: TEXT NOT NULL
    send_time: TIMESTAMPTZ NOT NULL
  }

  entity client_personal_notification {
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> (clients)
    preferred_communication_channel: communication_channel NOT NULL
    template_id: INTEGER <<FK>> (notification_templates)
    send_time: TIMESTAMPTZ NOT NULL
  }

  entity notification_templates {
    + id: INTEGER <<PK>>
    --
    type: notification_type NOT NULL
    message_template: TEXT
    promo_id: INTEGER
  }

  entity promotions {
    + id: INTEGER <<PK>>
    --
    title: VARCHAR(255) NOT NULL
    content: TEXT NOT NULL
    promo_type: promotion_type NOT NULL
    created_at: TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP
  }
}

package "booking and contract" {
  entity bookings{
    + id: INTEGER <<PK>>
    --
    tour_id: INTEGER <<FK>> (tours)
    status: booking_status DEFAULT 'draft'
    contract_number: VARCHAR(50) UNIQUE
    payment_links: TEXT
    created_at: TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP
    updated_at: TIMESTAMPTZ ON UPDATE CURRENT_TIMESTAMP
  }

  entity booking_agreements {
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> (clients)
    booking_id: INTEGER <<FK>> (bookings)
    signed_date: TIMESTAMPTZ NOT NULL
  }

  entity assignees {
    + id: INTEGER <<PK>>
    --
    client_id: INTEGER <<FK>> (clients)
  }

  entity contract_templates {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(100) NOT NULL
    content: TEXT NOT NULL
    validity_period_days: INTEGER NOT NULL
  }

  entity contracts {
    + id: INTEGER <<PK>>
    --
    assignee_id: INTEGER <<FK>> (assignes)
    template_id: INTEGER <<FK>> (contract_templates)
    issue_date: TIMESTAMPTZ NOT NULL
    sign_date: TIMESTAMPTZ
    status: consent_status NOT NULL
    total_price: DECIMAL(10,2) NOT NULL
  }

  entity agreement_consents {
    + id: INTEGER <<PK>>
    --
    assignee_id: INTEGER <<FK>> (assignees)
    contract_id: INTEGER <<FK>> (contracts)
    template_id: INTEGER <<FK>> NOT NULL
    date: DATE NOT NULL
    status: consent_status NOT NULL
  }

  entity consent_templates {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(100) NOT NULL
    type: consent_type NOT NULL
    content: TEXT NOT NULL
  }

  entity payment_links {
    + id: INTEGER <<PK>>
    --
    url: VARCHAR(255) NOT NULL
    qr_code: VARCHAR(255) NOT NULL
  }
}


package "tour" {
  entity tours{
    + id: INTEGER <<PK>>
    --
    title: VARCHAR(255) NOT NULL UNIQUE
    price_eur: DECIMAL(10,2) NOT NULL
    quota: INTEGER NOT NULL
    meals_type : meals_type
    is_last_minute: BOOLEAN DEFAULT FALSE
    last_minute_approved: BOOLEAN
    base_duration_days: INTEGER NOT NULL
  }

  ' Usually tours run several iterations during the year
  entity tour_iterations {
    + id: INTEGER <<PK>>
    --
    tour_id: INTEGER <<FK>> (tours)
    start_date: DATE NOT NULL
    end_date: DATE NOT NULL
    --
    UNIQUE(tour_id, start_date)
  }

  entity tour_routes {
    + id: INTEGER <<PK>>
    --
    tour_id: INTEGER <<FK>> (tours)
  }

  entity route_points {
    + id: INTEGER <<PK>>
    --
    route_id: INTEGER <<FK>> (tour_routes)
    city_id: INTEGER <<FK>> (route_points)
    name: VARCHAR(255) NOT NULL
    address: TEXT NOT NULL
    duration_time : INTERVAL
    route_id: INTEGER NOT NULL <<FK>> (tour_routes)
    in_route_order_position: INTEGER NOT NULL
  }

  entity transport_services {
    + id: INTEGER <<PK>>
    --
    company: VARCHAR(255) NOT NULL
    model: VARCHAR(255)
  }

  entity transfers {
    + id: INTEGER <<PK>>
    --
    tour_id: INTEGER <<FK>> (tours)
    transport_id: INTEGER <<FK>> (transport_services)
    departure_point: point_id NOT NULL <<FK>> (route_points)
    arrival_point: point_id NOT NULL <<FK>> (route_points)
    departure_time: TIMESTAMPTZ NOT NULL
  }

  entity organizers {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(255) NOT NULL
    phone: VARCHAR(20) NOT NULL
    email: VARCHAR(255) NOT NULL
  }

  entity excursions {
    + id: INTEGER <<PK>>
    --
    tour_id: INTEGER <<FK>> (tours)
    organizer_id: INTEGER <<FK>> NOT NULL
    name: VARCHAR(255) NOT NULL
    meeting_location : point_id NOT NULL <<FK>> (route_points)
    meeting_time: TIMESTAMPTZ NOT NULL
  }

  entity insurance_companies {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(255) NOT NULL
    phone: VARCHAR(20) NOT NULL
    email: VARCHAR(255) NOT NULL
  }

  entity insurances {
    + id: INTEGER <<PK>>
    --
    tour_id: INTEGER <<FK>> (tours)
    insurance_company_id: INTEGER <<FK>> NOT NULL
    coverage_type: insurance_type NOT NULL
  }
}


package "hotel" {
  entity hotel_room_categories {
    + id: INTEGER <<PK>>
    --
    hotel_id: INTEGER <<FK>> (hotels)
    name: VARCHAR(100) NOT NULL
    price_per_night: DECIMAL(10,2) NOT NULL
    max_guests: INTEGER NOT NULL
  }

  entity amenities {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(255) NOT NULL UNIQUE
    description: TEXT
  }

  entity hotels {
    + id: INTEGER <<PK>>
    --
    name: VARCHAR(255) NOT NULL
    address: TEXT NOT NULL
    cancellation_terms: TEXT NOT NULL
  }

  entity hotel_interactions {
    + id: INTEGER <<PK>>
    --
    hotel_id: INTEGER <<FK>> (hotels)
    date_utc: DATETIME NOT NULL
    communication_channel: communication_channel NOT NULL
    type: interaction_type NOT NULL
    summary: TEXT
    agreements: TEXT
    next_contact_reminder_id : reminder_id <<FK>> (hotel_next_contact_reminders)
  }

  entity hotel_next_contact_reminders {
    + id: INTEGER <<PK>>
    --
    hotel_id: INTEGER <<FK>>
    preferred_communication_channel: communication_channel NOT NULL
    message: TEXT NOT NULL
    send_date: TIMESTAMPTZ NOT NULL
  }
}

' ENUM Definitions

note right of client_interactions
  **communication_channel**:
  - phone
  - telegram
  - whatsapp
  - email
  - meeting

  **interaction_type**:
  - discussion
  - agreement
  - complaint
end note

note right of promotions
  **promotion_type**
  - new_tours
  - last_minute_tour
  - early_booking
end note

note right of bookings
  **booking_status**:
  - draft
  - pending_signature
  - pending_payment
  - partially_paid
  - fully_paid
  - cancellation_requested
  - canceled
end note

note right of agreement_consents
  **consent_type**:
  - personal_data
  - contract_terms
  - ad

  **consent_status**:
  - granted
  - pending
  - revoked
end note

note right of hotel_interactions
  **interaction_type**:
  - discussion
  - agreement
  - claim
end note

note right of tours
  **meals_type**
  - breakfast
  - half_board
  - full_board
end note

note right of notification_templates
  **notification_type**:
  - passport_expiry
  - flight_reminder
  - payment_reminder
  - birthday_promo
end note

note right of insurances
  **insurance_type**
  - medical
  - lost_luggage
end note

note right of passports
  **passport_type**
  - internal
  - foreign
end note



' Relationships

clients||--o{ passports
clients||--|| cities
clients||--o{ client_interactions
clients }o--o{ bookings
clients ||--o{ bans
client_interactions ||--|| client_next_contact_reminders
client_personal_notification }o--|| notification_templates
clients||--o{ client_personal_notification
notification_templates ||--|| promotions

countries||--||cities

bookings||--|| tours
route_points||--||cities
tours||--o{ tour_routes
tours||--o{ tour_iterations
tour_routes ||--o{ route_points
tours||--o{ transfers
tours||--o{ excursions
tours||--o{ insurances
tours}o--o{ hotels
excursions ||--|| route_points
excursions ||--|| organizers
transfers ||--|| transport_services
insurances ||--|| insurance_companies

hotels ||--o{ hotel_interactions
hotel_interactions ||--|| hotel_next_contact_reminders
hotels ||--o{ hotel_room_categories
hotel_room_categories }o--o{ amenities

bookings||--o{ booking_agreements
assignees ||--o{ contracts
assignees ||--|| clients
contract_templates ||--o{ contracts
contracts ||--o{ agreement_consents
consent_templates ||--o{ agreement_consents
bookings||--o{ payment_links

@enduml